[REFACTOR] Resolve Sonar issues for toList migration, parameterized tests, and assertThrows lambda cleanup